--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ font-family: 'Sarala', sans-serif; */
     --corp: #FFF2E7;
 }
 
- * {
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -135,118 +135,8 @@ body {
     margin: 0 auto;
 }
 
-/* RESPONSIVIDADE */
-
 @media screen and (max-width: 480px) {
-    .cabecalho {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-        padding: 24px;
-    }
-    
-    .cabecalho-imagem {
-        height: 72px;
-    }
-    
-    .cabecalho-menu {
-        display: flex;
-        gap: 32px;
-    }
-    
-    .cabecalho-menu-item {
-        font-family: var(--fonte2);
-        color: var(--corp);
-        font-weight: 400;
-        font-size: 18px;
-    }
-    
-    .conteudo {
-        margin-bottom: 48px;
-        border-top: 0.4px solid #FFF2E7;
-    }
-    
-    .conteudo-principal {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-    }
-    
-    .conteudo-principal-escrito {
-        display: flex;
-        flex-direction: column;
-        gap: 32px;
-    }
-    
-    .conteudo-principal-escrito-titulo {
-        font-family: var(--fonte2);
-        font-weight: 400;
-        font-size: 64px;
-        color: var(--corp);
-    }
-    
-    .conteudo-principal-escrito-subtitulo {
-        font-family: var(--fonte2);
-        font-weight: 400;
-        font-size: 24px;
-        color: var(--corp);
-    }
-    
-    .conteudo-principal-escrito-botao {
-        background-color: #ECD6C4;
-        width: 180px;
-        height: 60px;
-        border: none;
-        border-radius: 20px;
-        box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
-        font-family: var(--fonte2);
-        font-weight: 400;
-        font-size: 20px;
-    }
-    
-    .conteudo-principal-escrito-botao:hover {
-        background-color: rgba(236, 241, 196, 0.53);
-    }
-    
-    .conteudo-principal-imagem {
-        height: 430px;
-    }
-    
-    .conteudo-secundario {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 24px;
-        margin-top: 48px;
-    }
-    
-    .conteudo-secundario-titulo {
-        border-top: 0.4px solid var(--corp);
-        padding-top: 48px;
-        margin-bottom: 16px;
-        font-family: var(--fonte2);
-        font-weight: 400;
-        font-size: 24px;
-        color: var(--corp);
-    }
-    
-    .conteudo-secundario-paragrafo {
-        font-family: var(--fonte2);
-        font-weight: 400;
-        font-size: 18px;
-        color: var(--corp);
-    }
-    
-    .rodape {
-        padding: 32px;
-        border-top: 0.4px solid var(--corp);
-    }
-    
-    .rodape-imagem {
-        height: 48px;
-        display: block;
-        margin: 0 auto;
+    body {
+        display: flexbox;
     }
 }   
