--- a/style.css
+++ b/style.css
@@ -135,8 +135,50 @@ body {
     margin: 0 auto;
 }
 
+/* RESPONSIVIDADE */
+
 @media screen and (max-width: 480px) {
-    body {
+    .cabecalho {
         display: flexbox;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cabecalho-imagem {
+        height: 150px;
+    }
+    
+    .cabecalho-menu {
+        flex-direction: column;
+        margin-left: -190px;
+        margin-top: 20px;
+    }
+
+    .cabecalho-menu-item {
+        font-size: 20px;
+    }
+
+    .conteudo {
+        display: flexbox;
+        flex-direction: column;
+    }
+
+    .conteudo-principal {
+        display: flexbox;
+        flex-direction: column;
+    }
+
+    .conteudo-principal-escrito-titulo {
+        text-align: center;
+        font-size: 80px;
+    }
+
+    .conteudo-principal-escrito-subtitulo {
+        text-align: center;
+        margin-top: -20px;
+    }
+
+    .conteudo-principal-escrito-botao {
+        margin-left: 120px;
     }
 }   
